--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
 		"configure": "pnpm --filter @mattrax/configure --",
 		"ingest": "pnpm --filter @mattrax/ingest --",
 		"doc": "pnpm --filter @mattrax/docs --",
+		"docs": "pnpm --filter @mattrax/docs --",
 		"web": "pnpm --filter @mattrax/web --",
 		"infra": "pnpm --filter @mattrax/infra exec sst",
-		"db:push": "drizzle-kit push && bun run ./apps/web/src/db/rust.ts",
-		"db:gen": "drizzle-kit generate && bun run ./apps/web/src/db/rust.ts",
-		"db:studio": "drizzle-kit studio",
-		"db:rs": "bun run ./apps/web/src/db/rust.ts",
+		"db:push": "DRIZZLE=1 drizzle-kit push && DRIZZLE=1 bun run ./apps/web/src/db/rust.ts",
+		"db:gen": "DRIZZLE=1 drizzle-kit generate && DRIZZLE=1 bun run ./apps/web/src/db/rust.ts",
+		"db:studio": "DRIZZLE=1 drizzle-kit studio",
+		"db:rs": "DRIZZLE=1 bun run ./apps/web/src/db/rust.ts",
 		"typecheck": "tsc -b",
 		"lint": "biome lint .",
 		"fix": "biome lint --config-path biome.json --apply . && biome format --write . && biome check . --apply",
