--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
 		"@solidjs/start": "1.0.0-rc.1",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.21.2",
+		"nx": "^19.1.1",
 		"pg": "^8.11.5",
 		"typescript": "^5.4.5",
 		"vinxi": "^0.3.11"
 	},
 	"devDependencies": {
 		"husky": "^9.0.11",
-		"wrangler": "^3.57.1"
+		"wrangler": "^3.57.1",
+		"nx": "19.1.0"
 	},
 	"resolutions": {
 		"drizzle-orm": "^0.30.8"
