--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -98,7 +98,7 @@ jobs:
           - web
     name: Build ${{ matrix.projects }}
     runs-on: ubuntu-latest
-    needs: [planner]
+    needs: [plan]
     environment:
       name: ${{ matrix.projects.name }}
     steps:
