--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -100,12 +100,12 @@ jobs:
           - landing
           - docs
           - web
-    name: Build ${{ matrix.projects }}
-    runs-on: ubuntu-latest
-    if: ${{ !steps.planner.outputs.planner[matrix.projects] }}
-    needs: [plan]
     environment:
       name: ${{ matrix.projects }}
+    name: Build ${{ matrix.projects }}
+    runs-on: ubuntu-latest
+    needs: [plan]
+    if: ${{ needs.plan.outputs.planner[matrix.projects] }}
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
