--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -1,3 +1,12 @@
 name = "mattrax"
 compatibility_date = "2024-05-12"
 compatibility_flags = ["nodejs_compat"]
+
+[[durable_objects.bindings]]
+name = "ORG_REALTIME_DO"
+class_name = "OrgRealtime"
+# script_name = "./src/api/rest/cloud/OrgRealtime.ts"
+
+[[migrations]]
+tag = "v1"
+new_classes = ["OrgRealtime"]
