--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -5,7 +5,7 @@ compatibility_flags = ["nodejs_compat"]
 [[durable_objects.bindings]]
 name = "ORG_REALTIME_DO"
 class_name = "OrgRealtime"
-# script_name = "./src/api/rest/cloud/OrgRealtime.ts"
+script_name = "./src/api/rest/cloud/OrgRealtime.ts"
 
 [[migrations]]
 tag = "v1"
