--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -13,7 +13,8 @@
 		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.13",
 		"autoprefixer": "^10.4.19",
-		"tailwindcss": "^3.4.3"
+		"tailwindcss": "^3.4.3",
+		"wrangler": "^3.57.2"
 	},
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.0.18",
