--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
 		"vinxi": "^0.3.11"
 	},
 	"devDependencies": {
-		"husky": "^9.0.11",
-		"wrangler": "^3.57.1"
+		"husky": "^9.0.11"
 	},
 	"resolutions": {
 		"drizzle-orm": "^0.30.8"
