--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -6,7 +6,8 @@
 		"dev": "vinxi dev --host 0.0.0.0 --port 3001",
 		"build": "vinxi build",
 		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build",
-		"start": "vinxi start"
+		"start": "vinxi start",
+		"wrangler": "wrangler"
 	},
 	"devDependencies": {
 		"@iconify/json": "^2.2.211",
