--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev -p 3003",
 		"build": "next build",
 		"cbuild": "pnpm dlx @cloudflare/next-on-pages@1 && cp -R ./.vercel/output/static ./dist",
-		"start": "next start"
+		"start": "next start",
+		"wrangler": "wrangler"
 	},
 	"browserslist": "defaults, not ie <= 11",
 	"dependencies": {
