--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -6,8 +6,7 @@
 		"dev": "next dev -p 3003",
 		"build": "next build",
 		"cbuild": "pnpm dlx @cloudflare/next-on-pages@1 && cp -R ./.vercel/output/static ./dist",
-		"start": "next start",
-		"wrangler": "wrangler"
+		"start": "next start"
 	},
 	"browserslist": "defaults, not ie <= 11",
 	"dependencies": {
@@ -53,7 +52,6 @@
 		"eslint-config-next": "^14.2.3",
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.14",
-		"sharp": "0.33.4",
-		"wrangler": "^3.57.2"
+		"sharp": "0.33.4"
 	}
 }
