--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -6,16 +6,14 @@
 		"dev": "vinxi dev --host 0.0.0.0 --port 3001",
 		"build": "vinxi build",
 		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build",
-		"start": "vinxi start",
-		"wrangler": "wrangler"
+		"start": "vinxi start"
 	},
 	"devDependencies": {
 		"@iconify/json": "^2.2.211",
 		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.13",
 		"autoprefixer": "^10.4.19",
-		"tailwindcss": "^3.4.3",
-		"wrangler": "^3.57.2"
+		"tailwindcss": "^3.4.3"
 	},
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.0.18",
