--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -21,6 +21,7 @@
 		{ "path": "../../packages/ui" },
 		{ "path": "../../packages/email" },
 		{ "path": "../../packages/trpc-server-function" },
+		{ "path": "../../packages/policy" },
 		{ "path": "../../packages/policy-composer" }
 	]
 }
