--- a/packages/policy-composer/tsconfig.json
+++ b/packages/policy-composer/tsconfig.json
@@ -5,5 +5,6 @@
 		"types": ["@mattrax/ui/types"]
 	},
 	"include": ["src/"],
-	"exclude": ["node_modules", "dist"]
+	"exclude": ["node_modules", "dist"],
+	"references": [{ "path": "../../packages/policy" }]
 }
