--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
 		"@solid-primitives/scheduled": "^1.4.3",
 		"@solid-primitives/storage": "^3.5.0",
 		"@solid-primitives/timer": "^1.3.9",
+		"@solid-primitives/websocket": "^1.2.2",
 		"@solidjs/router": "=0.13.3",
 		"@solidjs/start": "1.0.0-rc.1",
 		"@t3-oss/env-core": "^0.10.1",
