--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -76,6 +76,7 @@
 		"react-dom": "^18.3.1",
 		"solid-js": "^1.8.17",
 		"solid-sonner": "^0.2.7",
+		"sst": "^3.0.32",
 		"stripe": "^15.7.0",
 		"superjson": "^2.2.1",
 		"tailwindcss": "^3.4.3",
