--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -11,10 +11,7 @@ permissions:
   contents: read
 
 env:
-  CLOUDFLARE_DEFAULT_ACCOUNT_ID: f02b3ef168fe64129e9941b4fb2e4dc1
-  CLOUDFLARE_ACCOUNT_ID: f02b3ef168fe64129e9941b4fb2e4dc1
-  CLOUDFLARE_EMAIL: oscar@mattrax.app
-  CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
+  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   # Used when building landing
   VITE_MATTRAX_CLOUD_ORIGIN: https://cloud.mattrax.app
 
