--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	},
 	"dependencies": {
 		"@biomejs/biome": "^1.7.3",
-		"@solidjs/start": "1.0.0-rc.1",
+		"@solidjs/start": "1.0.1",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.21.2",
 		"pg": "^8.11.5",
@@ -49,9 +49,9 @@
 			"@react-email/tailwind@0.0.16": "patches/@react-email__tailwind@0.0.16.patch",
 			"nitropack@2.9.6": "patches/nitropack@2.9.6.patch",
 			"@solid-mediakit/trpc@3.0.2": "patches/@solid-mediakit__trpc@3.0.2.patch",
-			"@solidjs/start@1.0.0-rc.1": "patches/@solidjs__start@1.0.0-rc.1.patch",
 			"@tanstack/solid-form@0.20.0": "patches/@tanstack__solid-form@0.20.0.patch",
-			"cmdk-solid@1.0.1": "patches/cmdk-solid@1.0.1.patch"
+			"cmdk-solid@1.0.1": "patches/cmdk-solid@1.0.1.patch",
+			"@solidjs/start@1.0.1": "patches/@solidjs__start@1.0.1.patch"
 		}
 	}
 }
