Overhaul enrollment process

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthor
 
 # Rust
 INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
-MDM_URL=http://localhost:8005
+MDM_URL=https://mdm.example.com
+ENTERPRISE_ENROLLMENT_URL=https://enterpriseenrollment.example.com
 
 # Billing
 STRIPE_PUBLISHABLE_KEY=
