--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,10 @@
 		"./tailwind": "./tailwind.js",
 		"./vite": "./vite.js",
 		"./types": "./src/types.d.ts",
-		"./css": "./src/index.css"
+		"./css": "./src/index.css",
+		"./card": "./src/card.tsx",
+		"./input": "./src/input.tsx",
+		"./button": "./src/button.tsx"
 	},
 	"dependencies": {
 		"@corvu/tailwind": "^0.1.5",
