--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,6 @@
 mattrax = "run -p mattrax --"
 mttx = "run -p mttx -- --server http://localhost:3000 "
 mattraxd = "run -p mattraxd --"
+
+[env]
+WEB_URL = "http://localhost:3000" # Redirect traffic to your devserver.
