--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PROD_ORIGIN=http://localhost:3000
+VITE_PROD_ORIGIN=http://localhost:3000
 DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
 
 # Rust
