--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,7 @@
 		"@solidjs/router": "^0.13.3",
 		"@tanstack/form-core": "^0.20.0",
 		"@tanstack/solid-form": "^0.20.0",
+		"@tanstack/solid-virtual": "^3.5.0",
 		"@tanstack/zod-form-adapter": "^0.20.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
