Implement device enrollment as admin

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,15 +12,8 @@
 		"email:export": "email export --dir ./src/emails",
 		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
 	},
-	"exports": {
-		"./sst": {
-			"import": {
-				"browser": "./src/sst-shim.js",
-				"default": "./node_modules/sst/dist/index.js"
-			}
-		}
-	},
 	"dependencies": {
+		"@mattrax/web": "file:./",
 		"@corvu/otp-field": "^0.1.0",
 		"@hono/zod-validator": "^0.2.1",
 		"@kobalte/core": "^0.13.1",
