Enroll as administrator (#352)
* wip

* a

* fixed?

* broken

* working

* fix double rendering on `PageLayout`

* Put `action` in `location.state`

* fixes

* Fix SST

* Hide continue on dashboard when in MDM webview

* Implement device enrollment as admin

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
 		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
 	},
 	"dependencies": {
+		"@mattrax/web": "file:./",
 		"@corvu/otp-field": "^0.1.0",
 		"@hono/zod-validator": "^0.2.1",
 		"@kobalte/core": "^0.13.1",
