--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
 		"@mattrax/policy-composer": "workspace:*",
 		"@mattrax/trpc-server-function": "workspace:^",
 		"@mattrax/ui": "workspace:*",
+		"@mattrax/web": "file:./",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@planetscale/database": "^1.18.0",
@@ -51,6 +52,7 @@
 		"@tanstack/solid-query-devtools": "^5.36.1",
 		"@tanstack/solid-query-persist-client": "^5.36.1",
 		"@tanstack/solid-table": "^8.17.3",
+		"@tanstack/solid-virtual": "^3.5.0",
 		"@tanstack/zod-form-adapter": "^0.20.0",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
