--- a/packages/trpc-server-function/package.json
+++ b/packages/trpc-server-function/package.json
@@ -16,5 +16,8 @@
 		"@tanstack/query-core": "^5.36.1",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2"
+	},
+	"peerDependencies": {
+		"vinxi": "*"
 	}
 }
