--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -23,7 +23,10 @@
 		"@solidjs/router": "^0.13.3",
 		"@solidjs/start": "1.0.1",
 		"@tanstack/solid-form": "^0.20.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"h3": "^1.11.1",
+		"solid-icons": "^1.1.0",
 		"solid-js": "^1.8.17",
 		"vinxi": "=0.3.11",
 		"vite": "^5.2.11",
