--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -23,6 +23,8 @@
 		"@solidjs/router": "^0.13.3",
 		"@solidjs/start": "1.0.1",
 		"@tanstack/solid-form": "^0.20.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"h3": "^1.11.1",
 		"solid-js": "^1.8.17",
 		"vinxi": "=0.3.11",
