nested windows node editing

--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -27,7 +27,7 @@
 		"clsx": "^2.1.1",
 		"h3": "^1.11.1",
 		"solid-js": "^1.8.17",
-		"vinxi": "=0.3.11",
+		"vinxi": "^0.3.12",
 		"vite": "^5.2.11",
 		"zod": "^3.23.8"
 	}
