--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"db:rs": "DRIZZLE=1 bun run ./apps/web/src/db/rust.ts",
 		"typecheck": "tsc -b",
 		"lint": "biome lint .",
-		"fix": "biome lint --config-path biome.json --apply . && biome format --write . && biome check . --apply",
+		"fix": "biome lint --apply . && biome format --write . && biome check . --apply",
 		"format": "biome format --write .",
 		"prepare": "husky"
 	},
@@ -51,7 +51,7 @@
 			"@tanstack/solid-form@0.20.0": "patches/@tanstack__solid-form@0.20.0.patch",
 			"cmdk-solid@1.0.1": "patches/cmdk-solid@1.0.1.patch",
 			"@solidjs/start@1.0.1": "patches/@solidjs__start@1.0.1.patch",
-			"vinxi@0.3.11": "patches/vinxi@0.3.11.patch"
+			"vinxi@0.3.12": "patches/vinxi@0.3.12.patch"
 		}
 	}
 }
