--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -85,7 +85,7 @@
 		"superjson": "^2.2.1",
 		"tailwindcss": "^3.4.3",
 		"ts-pattern": "^5.1.1",
-		"vinxi": "=0.3.11",
+		"vinxi": "^0.3.12",
 		"xml2js": "^0.6.2",
 		"zod": "^3.23.8"
 	},
